--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DermAI Care</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta
+      name="description"
+      content="Get instant AI analysis of skin conditions and connect with certified dermatologists for professional care.
+
+    "
+    />
+    <meta name="author" content="Drake" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
