fix: change settings

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>DermAI Care</title>
     <meta
       name="description"
-      content="Get instant AI analysis of skin conditions and connect with certified dermatologists for professional care.
-
-    "
+      content="Get instant AI analysis of skin conditions and connect with certified dermatologists for professional care."
     />
     <meta name="author" content="Drake" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta content="/src/assets/images/Homepage-DerMaAI.png" />
   </head>
 
   <body>
